force-app/main/default/objects/Account/fields/ERP_Bill_To_Location__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_To_Location__c</fullName>
    <description>http://xmlns.oracle.com/apps/cdm/foundation/parties/flex/custAccountSiteUse/
Location</description>
    <inlineHelpText>http://xmlns.oracle.com/apps/cdm/foundation/parties/flex/custAccountSiteUse/
Location</inlineHelpText>
    <label>ERP Bill To Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>