force-app/main/default/objects/Account/fields/ERP_Bill_To_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_To_Site_ID__c</fullName>
    <label>ERP Bill To Site ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>