force-app/main/default/objects/Account/fields/ERP_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_First_Name__c</fullName>
    <label>ERP Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>