force-app/main/default/objects/Account/fields/ERP_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_ID__c</fullName>
    <label>ERP Contact ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>