force-app/main/default/objects/Account/fields/ERP_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Phone__c</fullName>
    <label>ERP Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>