force-app/main/default/objects/Account/fields/ERP_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Type__c</fullName>
    <formula>IF(ERP_Customer_Type_Description__c = &quot;External&quot;, &quot;R&quot;,
IF(ERP_Customer_Type_Description__c = &quot;Internal&quot;, &quot;I&quot;,
&quot;R&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Customer Type</label>
    <type>Text</type>
</CustomField>