force-app/main/default/objects/Account/fields/ERP_Customer_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Type_Description__c</fullName>
    <formula>IF(RecordType.Name = &quot;Capital Provider&quot;, &quot;External&quot;,
IF(RecordType.Name = &quot;Conflicts Check LDCCR&quot;, &quot;Internal&quot;,
IF(RecordType.Name = &quot;Houlihan Company&quot;, &quot;Internal&quot;,
IF(RecordType.Name = &quot;Legal Entity&quot;, &quot;Internal&quot;,
IF(RecordType.Name = &quot;Operating Company&quot;, &quot;External&quot;,
NULL)))))</formula>
    <label>ERP Customer Type Description</label>
    <type>Text</type>
</CustomField>