force-app/main/default/objects/Account/fields/ERP_Last_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Status__c</fullName>
    <description>The last status of the integration with the financial application</description>
    <label>ERP Last Integration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>