force-app/main/default/objects/Account/fields/ERP_Org_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Org_Party_ID__c</fullName>
    <description>Store the Oracle Organization Party Id</description>
    <label>ERP Org Party ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>