force-app/main/default/objects/Account/fields/ERP_Parent_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Parent_Party_ID__c</fullName>
    <formula>Parent.ERP_Org_Party_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Parent Party ID</label>
    <type>Text</type>
</CustomField>