force-app/main/default/objects/Account/fields/ERP_Ship_To_Address_Flag__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ship_To_Address_Flag__c</fullName>
    <label>ERP Ship To Address Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>