force-app/main/default/objects/Account/fields/ERP_Ship_To_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ship_To_Address_ID__c</fullName>
    <label>ERP Ship To Address ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>