force-app/main/default/objects/Account/fields/Esoteric_Focus__c.field-meta.xml
<CustomField>
    <fullName>Esoteric_Focus__c</fullName>
    <label>Esoteric Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Life Settlements</fullName>
            </value>
            <value>
                <fullName>Life Settlement Financing</fullName>
            </value>
            <value>
                <fullName>Film Financing</fullName>
            </value>
            <value>
                <fullName>Litigation Finance</fullName>
            </value>
            <value>
                <fullName>Aviation (Equity)</fullName>
            </value>
            <value>
                <fullName>Aviation (Debt)</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>