force-app/main/default/objects/Account/fields/Estimated_AUM_MM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AUM_MM__c</fullName>
    <label>Estimated AUM (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>