force-app/main/default/objects/Account/fields/Financials_Year__c.field-meta.xml
<CustomField>
    <fullName>Financials_Year__c</fullName>
    <formula>TEXT(Most_Recent_Company_Financial__r.Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financials Year</label>
    <type>Text</type>
</CustomField>