force-app/main/default/objects/Account/fields/First_Time_Funds__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Funds__c</fullName>
    <label>First Time Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>