force-app/main/default/objects/Account/fields/Flag_Reason_Change_By__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason_Change_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flag Reason Change By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>