force-app/main/default/objects/Account/fields/Flag_Reason_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason_Change_Date__c</fullName>
    <label>Flag Reason Change Date</label>
    <type>DateTime</type>
</CustomField>