force-app/main/default/objects/Account/fields/Flag_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason_Comment__c</fullName>
    <label>Flag Reason Comment</label>
    <type>TextArea</type>
</CustomField>