force-app/main/default/objects/Account/fields/FSG_Name__c.field-meta.xml
<CustomField>
    <fullName>FSG_Name__c</fullName>
    <label>FSG Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>