force-app/main/default/objects/Account/fields/Fund_Focus__c.field-meta.xml
<CustomField>
    <fullName>Fund_Focus__c</fullName>
    <label>Fund Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Renewables</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Timber</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>