force-app/main/default/objects/Account/fields/Geographic_Coverage_Hub__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Coverage_Hub__c</fullName>
    <label>Geographic Coverage Hub</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>