force-app/main/default/objects/Account/fields/Geographical_Focus__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Focus__c</fullName>
    <label>Geographical Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>