force-app/main/default/objects/Account/fields/Has_Position__c.field-meta.xml
<CustomField>
    <fullName>Has_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an Account is no longer associated to ANY Positions, this should be set to FALSE</description>
    <label>Has Position</label>
    <type>Checkbox</type>
</CustomField>