force-app/main/default/objects/Account/fields/Individual_Company__c.field-meta.xml
<CustomField>
    <fullName>Individual_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies contacts whose company is unknown when the contact is created.  Checkbox is editable for Data Hygiene.</inlineHelpText>
    <label>Individual Company</label>
    <type>Checkbox</type>
</CustomField>