force-app/main/default/objects/Account/fields/Industry_Group_Abbreviation_All__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Abbreviation_All__c</fullName>
    <description>Used to display all Industry Group Options for VF/Custom Only</description>
    <label>Industry Group Abbreviation All</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>GEN</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>IFA</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>M&amp;T</fullName>
            </value>
            <value>
                <fullName>NRG</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>POW</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>SOV</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>