force-app/main/default/objects/Account/fields/Industry_Umbrella__c.field-meta.xml
<CustomField>
    <fullName>Industry_Umbrella__c</fullName>
    <formula>IF (CONTAINS(TEXT(Industry_Group__c),&apos;ADG -&apos;) || CONTAINS(TEXT(Industry_Group__c),&apos;BUS -&apos;) || CONTAINS(TEXT(Industry_Group__c),&apos;TRANS -&apos;),&apos;BUS - The Services Group&apos;, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Umbrella</label>
    <type>Text</type>
</CustomField>