force-app/main/default/objects/Account/fields/Investment_Size__c.field-meta.xml
<CustomField>
    <fullName>Investment_Size__c</fullName>
    <label>Investment Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small: &lt;$25m</fullName>
            </value>
            <value>
                <fullName>Medium: $25-100m</fullName>
            </value>
            <value>
                <fullName>Large: &gt;$100m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>