force-app/main/default/objects/Account/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant / Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Holding / Investment / Asset Mgr</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Private Bank / Wealth Manager</fullName>
            </value>
            <value>
                <fullName>Private Pension Plan</fullName>
            </value>
            <value>
                <fullName>Public Pension Plan</fullName>
            </value>
            <value>
                <fullName>Sovereign Wealth Fund</fullName>
            </value>
            <value>
                <fullName>High Net Worth Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>