force-app/main/default/objects/Account/fields/Is_a_Sponsor_Company__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Sponsor_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Sponsor Company?</label>
    <type>Checkbox</type>
</CustomField>