force-app/main/default/objects/Account/fields/Is_Client_EU_CF__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_EU_CF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Client EU (CF)</label>
    <type>Checkbox</type>
</CustomField>