force-app/main/default/objects/Account/fields/iSell__OSKeyID__c.field-meta.xml
<CustomField>
    <fullName>iSell__OSKeyID__c</fullName>
    <description>Unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
    <externalId>true</externalId>
    <label>D&amp;B ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>