force-app/main/default/objects/Account/fields/JDE_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>JDE_Industry_Code__c</fullName>
    <inlineHelpText>Legacy Information from SalesLogix</inlineHelpText>
    <label>JDE Industry Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>