force-app/main/default/objects/Account/fields/Key_Data_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Key_Data_Refreshed__c</fullName>
    <description>Use by ACE Team to denote that they have reviewed CapIQ/Company Financials information</description>
    <label>Key Data Refreshed</label>
    <type>Date</type>
</CustomField>