force-app/main/default/objects/Account/fields/Last_Raise_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Raise_Date__c</fullName>
    <label>Last Raise Date</label>
    <type>Date</type>
</CustomField>