force-app/main/default/objects/Account/fields/Last_Raise_MM__c.field-meta.xml
<CustomField>
    <fullName>Last_Raise_MM__c</fullName>
    <label>Last Raise (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>