force-app/main/default/objects/Account/fields/Legacy_Capital_Provider_Indication__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Capital_Provider_Indication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Capital Provider Indication</label>
    <type>Checkbox</type>
</CustomField>