force-app/main/default/objects/Account/fields/Legacy_Lead_FSCG_Account__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lead_FSCG_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Lead FSCG Account</label>
    <type>Checkbox</type>
</CustomField>