force-app/main/default/objects/Account/fields/Legacy_SECCODEID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SECCODEID__c</fullName>
    <label>Legacy SECCODEID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>