force-app/main/default/objects/Account/fields/Legacy_SLX_Division__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_Division__c</fullName>
    <label>Legacy SLX Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>