force-app/main/default/objects/Account/fields/Legacy_SLX_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_Fiscal_Year_End__c</fullName>
    <label>Legacy SLX Fiscal Year End</label>
    <type>Date</type>
</CustomField>