force-app/main/default/objects/Account/fields/Legacy_SLX_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_Headquarters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy SLX Headquarters</label>
    <type>Checkbox</type>
</CustomField>