force-app/main/default/objects/Account/fields/lmsilt__Active__c.field-meta.xml
<CustomField>
    <fullName>lmsilt__Active__c</fullName>
    <label>deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>