force-app/main/default/objects/Account/fields/lmsilt__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>lmsilt__NumberofLocations__c</fullName>
    <label>deprecated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>